@startuml class_diagram_simplified
title gn10-can Simplified Class Diagram

namespace gn10_can {

    namespace core {
        struct CANFrame {
            + id
            + data
            + dlc
            + flags
        }

        class CANBus {
            - attach(device)
            - detach(device)
            + update()
            + send_frame(frame)
        }

        abstract class CANDevice {
            + {abstract} on_receive(frame)
            # send(command, data)
        }
    }

    namespace drivers {
        interface ICanDriver {
            + {abstract} send(frame)
            + {abstract} receive(out_frame)
        }

        class DriverSTM32CAN {
            + init()
        }

        class DriverSTM32FDCAN {
            + init()
        }

        class "DriverAnyPlatform..." as DriverOther <<Future>> {
            + init()
        }
        note "ESP32, SocketCAN(Linux/ROS2), etc..." as NoteDriverOther
        DriverOther .. NoteDriverOther
    }

    namespace devices {
        class MotorDriverClient {
            + set_init(config)
            + set_target(target)
            + set_gain(type, value)
            + on_receive(frame)
        }

        class MotorDriverServer {
            + send_feedback(val, state)
            + on_receive(frame)
        }

        class MotorConfig {
            + set_params(...)
            + to_bytes()
        }

        class SolenoidDriverClient {
            + set_target(target: bool)
            + on_receive(frame)
        }

        class SolenoidDriverServer {
            + get_new_target(target: bool&)
            + on_receive(frame)
        }

        class "OtherDevice..." as OtherDevice <<Future>> {
            + on_receive(frame)
        }
        note "ServoDriver, SensorHub, etc..." as NoteOtherDevice
        OtherDevice .. NoteOtherDevice
    }

    core.CANBus o-- drivers.ICanDriver
    core.CANBus "1" o-- "*" core.CANDevice : manages (RAII) >
    core.CANDevice <|-- devices.MotorDriverClient
    core.CANDevice <|-- devices.MotorDriverServer
    core.CANDevice <|-- devices.SolenoidDriverClient
    core.CANDevice <|-- devices.SolenoidDriverServer
    core.CANDevice <|-- devices.OtherDevice
    core.CANDevice ..> core.CANBus : attaches to >
    devices.MotorDriverClient ..> devices.MotorConfig : uses >
    devices.MotorDriverServer ..> devices.MotorConfig : uses >

    drivers.ICanDriver <|.. drivers.DriverSTM32CAN
    drivers.ICanDriver <|.. drivers.DriverSTM32FDCAN
    drivers.ICanDriver <|.. drivers.DriverOther
}

@enduml
